Some adjustements, added traversal search

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -6,35 +6,45 @@ The Goal of this project was to not waste 10 hours manually remove image unused 
 = Presentation
 
 [source, shell]
-$ tree
-.
+├── LICENSE
 ├── Makefile
+├── README.asciidoc
 ├── demo-1
-│ ├── assets
-│ │ ├── should-move-to-unused.png
-│ │ └── yes.png (test.asciidoc is using this image)
-│ └── test.asciidoc
+│   ├── assets
+│   │   ├── should-move-to-unused-1.png
+│   │   └── yes.png
+│   ├── demo-3
+│   │   └── assets
+│   │       └── should-move-to-unused-3.png
+│   └── demo.asciidoc
 ├── demo-2
-│ └── assets
-│ └── should-move-to-unused.png
-├── main.py
-====
+│   └── assets
+│       └── should-move-to-unused-2.png
+├── demo.asciidoc
+└── main.py====
 
 [source, shell]
-$ ls
-Makefile demo-1 demo-2 main.py
 $ make craft
-mkdir -p demo-1/assets demo-2/assets
+mkdir -p demo-1/assets demo-2/assets demo-1/demo-3/assets
 touch ./demo-1/assets/yes.png
-touch ./demo-1/assets/should-move-to-unused.png
-touch ./demo-2/assets/should-move-to-unused.png
-$ make
+touch ./demo-1/assets/should-move-to-unused-1.png
+touch ./demo-2/assets/should-move-to-unused-2.png
+touch ./demo-1/demo-3/assets/should-move-to-unused-3.png
+cat ./demo.asciidoc > ./demo-1/demo.asciidoc
+$ make      
 python3 main.py
-./demo-1/assets/should-move-to-unused.png is unused
-./demo-2/assets/should-move-to-unused.png is unused
-
+Browsing: .
+Browsing: ./demo-1
+./demo-1/assets/should-move-to-unused-1.png is unused
+Browsing: ./demo-1/assets
+Browsing: ./demo-1/demo-3
+./demo-1/demo-3/assets/should-move-to-unused-3.png is unused
+Browsing: ./demo-1/demo-3/assets
+Browsing: ./demo-2
+./demo-2/assets/should-move-to-unused-2.png is unused
+Browsing: ./demo-2/assets
 $ make clean
-rm -rf unused-images
+rm -rf unused-images demo-1 demo-2
 ====
 
 = Notes
